test/parser/error_recovery_block.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn error(x: i32) -> void {
    
    // CHECK: [[# @LINE + 1 ]]:13: error: expected expression
    if (x ==) {
        if (x == 2) {

        } else {

        }
    // CHECK: [[# @LINE + 1 ]]:7: error: expected expression
    } else {
        1;
    }

    2;
}

// CHECK: FunctionDecl error -> void
// CHECK-NEXT:   ParamDecl:i32 x
// CHECK-NEXT:   Block
// CHECK-NEXT:     IntLiteral '2'
